[gd_scene load_steps=2 format=3 uid="uid://0rk1ff77shdv"]

[ext_resource type="Script" path="res://Scripts/interactive_area.gd" id="1_oyyqe"]

[node name="InteractiveArea" type="Area2D"]
script = ExtResource("1_oyyqe")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
